--- a/Spring/securitywithjwt/src/main/resources/application.properties
+++ b/Spring/securitywithjwt/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://192.168.1.191:3306/db
+spring.datasource.username=user
+spring.datasource.password=password
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
