--- a/Spring/securitywithjwt/src/main/resources/application.properties
+++ b/Spring/securitywithjwt/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://192.168.1.191:3306/db
 spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.password=passwordcrm
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
